# MMDskin

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: build.yml  ci.yml
gradle/wrapper/: gradle-wrapper.properties
native/: Cargo.toml
native/cpp/: CMakeLists.txt
native/cpp/include/: mmdskin_backend.hpp
native/cpp/src/: mmdskin_backend.cpp  mmdskin_imgui.cpp
native/crates/mmdskin-native/: Cargo.toml
native/crates/mmdskin-native/src/: handles.rs  lib.rs  status.rs
src/client/java/com/micheanl/model/client/: MMDSkinClient.java
src/client/java/com/micheanl/model/client/imgui/: MMDImGuiActions.java  MMDImGuiController.java  MMDImGuiDrawData.java  MMDImGuiKeyMapping.java  MMDImGuiNative.java  MMDImGuiRenderTypes.java  MMDImGuiRenderer.java  MMDImGuiScreen.java
src/client/java/com/micheanl/model/client/mixin/: AvatarRendererMixin.java  ItemInHandRendererMixin.java
src/client/java/com/micheanl/model/client/mmd/: MMDAnimationRuntime.java  MMDModelRuntime.java  MMDPlayerAction.java  MMDPlayerAnimationSelector.java  ModelHash.java  ModelIndexEntry.java  ModelIndexer.java
src/client/java/com/micheanl/model/client/nativebridge/: MMDAnimationClip.java  MMDAnimationSummary.java  MMDModelKind.java  MMDModelMesh.java  MMDModelSkeleton.java  MMDModelSummary.java  (+8 more)
src/client/resources/: mmdskin.client.mixins.json
src/client/resources/assets/mmdskin/shaders/core/: mmdskin_model.vsh
src/main/java/com/micheanl/model/: MMDSkin.java
src/main/resources/: fabric.mod.json  mmdskin.accesswidener  mmdskin.mixins.json
(+40 files in other folders)
